# pwatch-backend

./: .gitignore  pyproject.toml  requirements.txt
about/: admin.py  models.py  serializers.py  urls.py  views.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0002_alter_blog_published_date.py  0003_alter_blog_content.py
chatbot/: admin.py  models.py  serializers.py  views.py
chatbot/migrations/: 0001_initial.py  0002_chatconversation_chatmessage.py
contact/: models.py
contact/migrations/: 0003_alter_donationsubmission_country.py
home/: admin.py  models.py  serializers.py  urls.py  views.py
home/management/commands/: populate_headlines.py
home/migrations/: 0002_headline.py
main/: settings.py  urls.py  utils.py
main/templates/main/: home.html
multimedia/: admin.py  models.py  serializers.py  urls.py  views.py
multimedia/migrations/: 0002_podcast.py  0003_remove_podcast_likes_remove_podcast_views_and_more.py
news/: models.py  serializers.py  urls.py  views.py
news/migrations/: 0003_alter_news_published_date.py  0004_alter_news_content.py
resources/: admin.py  serializers.py  urls.py  views.py
resources/migrations/: 0003_partnerpublication_date_received_and_more.py
trackers/: admin.py  models.py  serializers.py  urls.py  views.py
trackers/migrations/: 0001_initial.py  0004_debtdata.py  0005_loan.py  0006_hansard.py  0007_budget_orderpaper_alter_hansard_options.py  0011_hansard_date_received_orderpaper_date_received_and_more.py  0012_committee_begin_date_end_date.py
(+2 files in other folders)
